# anarci-lambda

./: Dockerfile  Dockerfile_proxy  README.md  ___All_Errors.txt  build.sh  build_proxy.sh  pyproject.toml
anarci/: Dockerfile  README.md  anarci.py  anarci_output.txt  test.fasta
anarci/ANARCI/: INSTALL  LICENCE  LICENCE_MUSCLE  README.md  setup.py
anarci/ANARCI/Example_scripts_and_sequences/: 12e8.fasta  ImmunoPDB.py  anarci_API_example.py  antibody_sequences.fasta  lysozyme.fasta  run_numbering_benchmark.sh
anarci/ANARCI/build_pipeline/: FastaIO.py  FormatAlignments.py  RUN_pipeline.sh  RipIMGT.py  test.csv_H.csv
anarci/ANARCI/lib/python/anarci/: __init__.py  anarci.py  schemes.py
helix_api/src/: annotation.py  api.py  api_exceptions.py  auth.py  backend.py  caching.py  config.py  dependencies.py  getfeatureAA.py  helpers.py  main.py  schemas.py  validator.py
helix_api/src/benchling/: benchling_api.py  exceptions.py  ngs_backend.py  schemas.py  utils.py
helix_api/src/tetrascience/: tdp_backend.py
scripts/scFv_registration/: dummy_scfv5.fasta  scfv_registration.py  scfv_registration_small.py
scripts/tdp/: ids_schema.py  test.R
scripts/tdp/files/: CP-TestClonePool_VH_uniques.fasta  dummy_meta_data.json
scripts/tdp/ids/: README.md  athena.json  elasticsearch.json  expected.json  schema.json
scripts/tdp/protocol/: protocol.yml
scripts/tdp/task-script/: config.json  main.py  pyproject.toml
