[tool.poetry]
name = "ngs-pipeline-raw-to-ids"
version = "2.0.0"
description = "NGS pipeline meta RAW to IDS task script"
authors = ["EPUZT <joris.chau.ext@bayer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
